--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "netlify dev -p 8844",
+    "build:fetch": "node _build/fetch.mjs",
     "build:css": "npx postcss \"**/*.postcss\" --base . --dir . --ext .css --config postcss.config.cjs",
     "build:html": "npx @11ty/eleventy --config=.eleventy.cjs --quiet",
     "build": "npm run build:html && npm run build:css",
@@ -29,6 +30,7 @@
     "concurrently": "^8.0",
     "eleventy-plugin-embed-everything": "^1",
     "eleventy-plugin-toc": "^1",
+    "madata": "^0.0.1-alpha.5",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8",
     "markdown-it-attrs": "^4",
